# mate-sensors-applet-plugin-liquidctl

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  sensors-applet
debian/: changelog  control  debhelper-build-stamp  files  mate-sensors-applet-plugin-liquidctl.substvars  rules
debian/mate-sensors-applet-plugin-liquidctl/DEBIAN/: control  md5sums
plugins/: Makefile.am
plugins/liquidctl/: Makefile.am  liquidctl-plugin.c  liquidctl-plugin.h  testlibliquidctl.c
